--- a/src/components/transactions/transactions.scss
+++ b/src/components/transactions/transactions.scss
@@ -50,6 +50,8 @@
 
 @media screen and (max-width: 900px) {
   .transactions {
+    grid-template-rows: 3rem auto 24rem auto;
+
     & div {
       grid-column: 1 / 4;
     }
